deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hitcounter
  labels:
    app: hitcounter
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0  
  selector:
    matchLabels:
      app: hitcounter
  template:
    metadata:
      labels:
        app: hitcounter
    spec:
      restartPolicy: Always
      containers:
      - name: hitcounter
        image: registry.local:5000/hitcounter:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: "0.25"
            memory: "64Mi"
          requests:
            cpu: "0.10"
            memory: "32Mi"
