deploy/redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: "redis"
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: "redis:alpine"
          ports:
            - containerPort: 6379
              protocol: TCP
          volumeMounts:
          - name: redis-storage
            mountPath: /data
          resources:
            limits:
              cpu: "0.50"
              memory: "64Mi"
            requests:
              cpu: "0.25"        
              memory: "32Mi"
      volumes:
      - name: redis-storage
        persistentVolumeClaim:
          claimName: redis-data
        # emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
